docs(*): 补充类文档

--- a/11类.md
+++ b/11类.md
@@ -495,93 +495,88 @@ function createPoint(
 
 ### 3.3. 结构类型原则
 
-Class 也遵循“结构类型原则”。一个对象只要满足 Class 的实例结构，就跟该 Class 属于同一个类型。
+`Class` 也遵循“结构类型原则”。一个对象只要满足 `Class` 的实例结构，就跟该 `Class` 属于同一个类型。
 
+```typescript
 class Foo {
   id!:number;
 }
-
 function fn(arg:Foo) {
   // ...
 }
-
 const bar = {
   id: 10,
   amount: 100,
 };
-
 fn(bar); // 正确
+```
 
-上面示例中，对象bar满足类Foo的实例结构，只是多了一个属性amount。所以，它可以当作参数，传入函数fn()。
+上例中，对象 `bar` 满足类 `Foo` 的实例结构，只是多了一个属性 `amount`。所以，它可以当作参数，传入函数 `fn()`。
 
-如果两个类的实例结构相同，那么这两个类就是兼容的，可以用在对方的使用场合。
+**如果两个类的实例结构相同，那么这两个类就是兼容的，可以用在对方的使用场合。** 两个结构相同的类，被视为相同的类。
 
+```typescript
 class Person {
-  name: string;
+  name: string = '';
+}
+class Customer {
+  name: string = '';
+}
+
+const c:Customer = new Person();
+```
+
+上例中，`Person` 和 `Customer` 是两个结构相同的类，TypeScript 将它们视为相同类型，因此 `Person` 可以用在类型为 `Customer` 的场合。
+
+为 `Person` 类添加一个属性：
+
+```typescript
+class Person {
+  name: string = '';
+  age: number = '';
 }
 
 class Customer {
-  name: string;
+  name: string = '';
 }
 
-// 正确
-const cust:Customer = new Person();
+const c:Customer = new Person();
+```
 
-上面示例中，Person和Customer是两个结构相同的类，TypeScript 将它们视为相同类型，因此Person可以用在类型为Customer的场合。
+上例中，`Person` 类添加了一个属性 `age`，跟 `Customer` 类的结构不再相同。但是这种情况下，TypeScript 依然认为，`Person` 属于 `Customer` 类型。
 
-现在修改一下代码，Person类添加一个属性。
+这是因为根据“结构类型原则”，只要 `Person` 类具有 `name` 属性，就满足 `Customer` 类型的实例结构，所以可以代替它。反过来就不行，如果 `Customer` 类多出一个属性，就会报错。
 
+```typescript
 class Person {
-  name: string;
-  age: number;
+  name: string = '';
 }
-
 class Customer {
-  name: string;
+  name: string = '';
+  age: number = 0;
 }
+const c:Customer = new Person(); // Property 'age' is missing in type 'Person' but required in type 'Customer'.
+```
 
-// 正确
-const cust:Customer = new Person();
+上例中，`Person` 类比 `Customer` 类少一个属性 `age`，它就不满足 `Customer` 类型的实例结构，就报错了。因为在使用 `Customer` 类型的情况下，可能会用到它的 `age` 属性，而 `Person` 类就没有这个属性。只要 A 类具有 B 类的结构，哪怕还有额外的属性和方法，TypeScript 也认为 A 兼容 B 的类型。
 
-上面示例中，Person类添加了一个属性age，跟Customer类的结构不再相同。但是这种情况下，TypeScript 依然认为，Person属于Customer类型。
+不仅是类，**如果某个对象跟某个 class 的实例结构相同，TypeScript 也认为两者的类型相同。**
 
-这是因为根据“结构类型原则”，只要Person类具有name属性，就满足Customer类型的实例结构，所以可以代替它。反过来就不行，如果Customer类多出一个属性，就会报错。
-
+```typescript
 class Person {
-  name: string;
+  name: string = '';
 }
-
-class Customer {
-  name: string;
-  age: number;
-}
-
-// 报错
-const cust:Customer = new Person();
-
-上面示例中，Person类比Customer类少一个属性age，它就不满足Customer类型的实例结构，就报错了。因为在使用Customer类型的情况下，可能会用到它的age属性，而Person类就没有这个属性。
-
-总之，只要 A 类具有 B 类的结构，哪怕还有额外的属性和方法，TypeScript 也认为 A 兼容 B 的类型。
-
-不仅是类，如果某个对象跟某个 class 的实例结构相同，TypeScript 也认为两者的类型相同。
-
-class Person {
-  name: string;
-}
-
 const obj = { name: 'John' };
-const p:Person = obj; // 正确
+const p:Person = obj;
+```
 
-上面示例中，对象obj并不是Person的实例，但是赋值给变量p不会报错，TypeScript 认为obj也属于Person类型，因为它们的属性相同。
+上例中，对象 `obj` 并不是 `Person` 的实例，但是赋值给变量 `p` 不会报错，TypeScript 认为 `obj` 也属于 `Person` 类型，因为它们的属性相同。
 
-由于这种情况，运算符instanceof不适用于判断某个对象是否跟某个 class 属于同一类型。
-
-obj instanceof Person // false
-
-上面示例中，运算符instanceof确认变量obj不是 Person 的实例，但是两者的类型是相同的。
+由于这种情况，运算符 `instanceof` 不适用于判断某个对象是否跟某个 `class` 属于同一类型。`obj instanceof Person` 结果是 `false`。
 
 空类不包含任何成员，任何其他类都可以看作与空类结构相同。因此，凡是类型为空类的地方，所有类（包括对象）都可以使用。
 
+```typescript
 class Empty {}
 
 function fn(x:Empty) {
@@ -591,53 +586,52 @@ function fn(x:Empty) {
 fn({});
 fn(window);
 fn(fn);
+```
 
-上面示例中，函数fn()的参数是一个空类，这意味着任何对象都可以用作fn()的参数。
+上例中，函数 `fn()` 的参数是一个空类，这意味着任何对象都可以用作 `fn()` 的参数。
 
-注意，确定两个类的兼容关系时，只检查实例成员，不考虑静态成员和构造方法。
+**确定两个类的兼容关系时，只检查实例成员，不考虑静态成员和构造方法。**
 
+```typescript
 class Point {
   x: number;
   y: number;
   static t: number;
   constructor(x:number) {}
 }
-
 class Position {
   x: number;
   y: number;
   z: number;
   constructor(x:string) {}
 }
-
 const point:Point = new Position('');
+```
 
-上面示例中，Point与Position的静态属性和构造方法都不一样，但因为Point的实例成员与Position相同，所以Position兼容Point。
+上例中，`Point` 与 `Position` 的静态属性和构造方法都不一样，但因为 `Point` 的实例成员与 `Position` 相同，所以 `Position` 兼容 `Point`。
 
-如果类中存在私有成员（private）或保护成员（protected），那么确定兼容关系时，TypeScript 要求私有成员和保护成员来自同一个类，这意味着两个类需要存在继承关系。
+如果类中存在私有成员（`private`）或保护成员（`protected`），那么确定兼容关系时，TypeScript 要求私有成员和保护成员来自同一个类，这意味着两个类需要存在继承关系。
 
+```typescript
 // 情况一
 class A {
   private name = 'a';
 }
-
 class B extends A {
 }
-
 const a:A = new B();
 
 // 情况二
 class A {
   protected name = 'a';
 }
-
 class B extends A {
   protected name = 'b';
 }
-
 const a:A = new B();
+```
 
-上面示例中，A和B都有私有成员（或保护成员）name，这时只有在B继承A的情况下（class B extends A），B才兼容A。
+上例中，`A` 和 `B` 都有私有成员（或保护成员）`name`，这时只有在 `B` 继承 `A` 的情况下（class B extends A），`B` 才兼容 `A`。
 
 ## 4. 类的继承
 
@@ -923,8 +917,9 @@ class B extends A {
 
 上面示例中，子类 `B` 定义了父类 `A` 的同名成员 `x`，并且父类的 `x` 是保护成员，子类将其改成了公开成员。`B` 类的 `x` 属性前面没有修饰符，等同于修饰符是 `public`，外界可以读取这个属性。
 
-在类的外部，实例对象不能读取保护成员，但是在类的内部可以。
+**在类的外部，实例对象不能读取保护成员，但是在类的内部可以。**
 
+```typescript
 class A {
   protected x = 1;
 
@@ -932,17 +927,18 @@ class A {
     console.log(obj.x);
   }
 }
-
 const a = new A();
+a.x; // Property 'x' is protected and only accessible within class 'A' and its subclasses.
+a.f(a); // 1
+```
 
-a.x // 报错
-a.f(a) // 1
+上例中，属性 `x` 是类 `A` 的保护成员，在类的外部，实例对象 `a` 拿不到这个属性。但是，实例对象 `a` 传入类 `A` 的内部，就可以从 `a` 拿到 `x`。
 
-上面示例中，属性x是类A的保护成员，在类的外部，实例对象a拿不到这个属性。但是，实例对象a传入类A的内部，就可以从a拿到x。
-实例属性的简写形式
+### 5.4. 实例属性的简写形式
 
 实际开发中，很多实例属性的值，是通过构造方法传入的。
 
+```typescript
 class Point {
   x:number;
   y:number;
@@ -952,26 +948,29 @@ class Point {
     this.y = y;
   }
 }
+```
 
-上面实例中，属性x和y的值是通过构造方法的参数传入的。
+上例中，属性 `x` 和 `y` 的值是通过构造方法的参数传入的。
 
 这样的写法等于对同一个属性要声明两次类型，一次在类的头部，另一次在构造方法的参数里面。这有些累赘，TypeScript 就提供了一种简写形式。
 
+```typescript
 class Point {
   constructor(
     public x:number,
     public y:number
   ) {}
 }
-
 const p = new Point(10, 10);
 p.x // 10
 p.y // 10
+```
 
-上面示例中，构造方法的参数x前面有public修饰符，这时 TypeScript 就会自动声明一个公开属性x，不必在构造方法里面写任何代码，同时还会设置x的值为构造方法的参数值。注意，这里的public不能省略。
+上例中，构造方法的参数 `x` 前面有 `public` 修饰符，这时 TypeScript 就会自动声明一个公开属性 `x`，不必在构造方法里面写任何代码，同时还会设置 `x` 的值为构造方法的参数值。这里的 `public` 不能省略。
 
-除了public修饰符，构造方法的参数名只要有private、protected、readonly修饰符，都会自动声明对应修饰符的实例属性。
+除了 `public` 修饰符，构造方法的参数名只要有 `private`、`protected`、`readonly` 修饰符，都会自动声明对应修饰符的实例属性。
 
+```typescript
 class A {
   constructor(
     public a: number,
@@ -980,25 +979,23 @@ class A {
     readonly d: number
   ) {}
 }
+```
 
-// 编译结果
+```javascript
+"use strict";
 class A {
-    a;
-    b;
-    c;
-    d;
-    constructor(a, b, c, d) {
-      this.a = a;
-      this.b = b;
-      this.c = c;
-      this.d = d;
-    }
+  constructor(a, b, c, d) {
+    this.a = a;
+    this.b = b;
+    this.c = c;
+    this.d = d;
+  }
 }
+```
 
-上面示例中，从编译结果可以看到，构造方法的a、b、c、d会生成对应的实例属性。
+`readonly` 还可以与其他三个可访问性修饰符，一起使用。
 
-readonly还可以与其他三个可访问性修饰符，一起使用。
-
+```typescript
 class A {
   constructor(
     public readonly x:number,
@@ -1006,48 +1003,54 @@ class A {
     private readonly z:number
   ) {}
 }
+```
 
-静态成员
+## 6. 静态成员
 
-类的内部可以使用static关键字，定义静态成员。
+**类的内部可以使用 `static` 关键字，定义静态成员。静态成员是只能通过类本身使用的成员，不能通过实例对象使用。**
 
-静态成员是只能通过类本身使用的成员，不能通过实例对象使用。
-
+```typescript
 class MyClass {
   static x = 0;
   static printX() {
     console.log(MyClass.x);
   }
 }
-
 MyClass.x // 0
 MyClass.printX() // 0
 
-上面示例中，x是静态属性，printX()是静态方法。它们都必须通过MyClass获取，而不能通过实例对象调用。
+mc.x; // Property 'x' does not exist on type 'MyClass'. Did you mean to access the static member 'MyClass.x' instead?
+mc.printX(); // Property 'printX' does not exist on type 'MyClass'. Did you mean to access the static member 'MyClass.printX' instead?
+```
 
-static关键字前面可以使用 public、private、protected 修饰符。
+上例中，`x` 是静态属性，`printX()` 是静态方法。它们都必须通过 `MyClass` 获取，而不能通过实例对象调用。
 
+`static` 关键字前面可以使用 `public`、`private`、`protected` 修饰符。
+
+```typescript
 class MyClass {
   private static x = 0;
 }
+MyClass.x // Property 'x' is private and only accessible within class 'MyClass'.
+```
 
-MyClass.x // 报错
+上例中，静态属性 `x` 前面有 `private` 修饰符，表示只能在 `MyClass` 内部使用，如果在外部调用这个属性就会报错。
 
-上面示例中，静态属性x前面有private修饰符，表示只能在MyClass内部使用，如果在外部调用这个属性就会报错。
+静态私有属性也可以用 ES6 语法的 `#` 前缀表示：
 
-静态私有属性也可以用 ES6 语法的#前缀表示，上面示例可以改写如下。
-
+```typescript
 class MyClass {
   static #x = 0;
 }
+```
 
-public和protected的静态成员可以被继承。
+`public` 和 `protected` 的静态成员可以被继承。
 
+```typescript
 class A {
   public static x = 1;
   protected static y = 1;
 }
-
 class B extends A {
   static getY() {
     return B.y;
@@ -1056,12 +1059,15 @@ class B extends A {
 
 B.x // 1
 B.getY() // 1
+```
 
-上面示例中，类A的静态属性x和y都被B继承，公开成员x可以在B的外部获取，保护成员y只能在B的内部获取。
-泛型类
+上例中，类 `A` 的静态属性 `x` 和 `y` 都被 `B` 继承，公开成员 `x` 可以在 `B` 的外部获取，保护成员 `y` 只能在 `B` 的内部获取。
 
-类也可以写成泛型，使用类型参数。关于泛型的详细介绍，请看《泛型》一章。
+## 7. 泛型类
 
+类也可以写成泛型，使用类型参数。
+
+```typescript
 class Box<Type> {
   contents: Type;
 
@@ -1071,95 +1077,102 @@ class Box<Type> {
 }
 
 const b:Box<string> = new Box('hello!');
+```
 
-上面示例中，类Box有类型参数Type，因此属于泛型类。新建实例时，变量的类型声明需要带有类型参数的值，不过本例等号左边的Box<string>可以省略不写，因为可以从等号右边推断得到。
+上例中，类 `Box` 有类型参数 `Type`，因此属于泛型类。新建实例时，变量的类型声明需要带有类型参数的值，不过本例等号左边的 `Box<string>` 可以省略不写，因为可以从等号右边推断得到。
 
-注意，静态成员不能使用泛型的类型参数。
+**静态成员不能使用泛型的类型参数。**
 
+```typescript
 class Box<Type> {
   static defaultContents: Type; // 报错
 }
+```
 
-上面示例中，静态属性defaultContents的类型写成类型参数Type会报错。因为这意味着调用时必须给出类型参数（即写成Box<string>.defaultContents），并且类型参数发生变化，这个属性也会跟着变，这并不是好的做法。
-抽象类，抽象成员
+上例中，静态属性 `defaultContents` 的类型写成类型参数 `Type` 会报错。因为这意味着调用时必须给出类型参数（即写成 `Box<string>.defaultContents`），并且类型参数发生变化，这个属性也会跟着变，这并不是好的做法。
 
-TypeScript 允许在类的定义前面，加上关键字abstract，表示该类不能被实例化，只能当作其他类的模板。这种类就叫做“抽象类”（abstract class）。
+## 8.抽象类，抽象成员
 
+TypeScript 允许在类的定义前面，加上关键字 `abstract`，表示该类不能被实例化，只能当作其他类的模板。这种类就叫做“抽象类”（abstract class）。
+
+```typescript
 abstract class A {
   id = 1;
 }
+const a = new A(); // Cannot create an instance of an abstract class.
+```
 
-const a = new A(); // 报错
+**抽象类只能当作基类使用，用来在它的基础上定义子类。**
 
-上面示例中，直接新建抽象类的实例，会报错。
-
-抽象类只能当作基类使用，用来在它的基础上定义子类。
-
+```typescript
 abstract class A {
   id = 1;
 }
-
 class B extends A {
   amount = 100;
 }
-
 const b = new B();
-
 b.id // 1
 b.amount // 100
+```
 
-上面示例中，A是一个抽象类，B是A的子类，继承了A的所有成员，并且可以定义自己的成员和实例化。
+上例中，`A` 是一个抽象类，`B` 是 `A` 的子类，继承了 `A` 的所有成员，并且可以定义自己的成员和实例化。
 
-抽象类的子类也可以是抽象类，也就是说，抽象类可以继承其他抽象类。
+**抽象类的子类也可以是抽象类，也就是说，抽象类可以继承其他抽象类。**
 
+```typescript
 abstract class A {
   foo:number;
 }
-
 abstract class B extends A {
   bar:string;
 }
+```
 
-抽象类的内部可以有已经实现好的属性和方法，也可以有还未实现的属性和方法。后者就叫做“抽象成员”（abstract member），即属性名和方法名有abstract关键字，表示该方法需要子类实现。如果子类没有实现抽象成员，就会报错。
+抽象类的内部可以有已经实现好的属性和方法，也可以有还未实现的属性和方法。后者就叫做“抽象成员”（`abstract member`），即属性名和方法名有 `abstract` 关键字，表示该方法需要子类实现。如果子类没有实现抽象成员，就会报错。
 
+```typescript
 abstract class A {
   abstract foo:string;
   bar:string = '';
 }
-
-class B extends A {
-  foo = 'b';
+class B extends A { // Non-abstract class 'B' does not implement all abstract members of 'A' 非抽象类'B'没有实现'A'的所有抽象成员
+  foo2 = 'b';
 }
+```
 
-上面示例中，抽象类A定义了抽象属性foo，子类B必须实现这个属性，否则会报错。
+上例中，抽象类 `A` 定义了抽象属性 `foo`，子类 `B` 必须实现这个属性，否则会报错。
 
-下面是抽象方法的例子。如果抽象类的方法前面加上abstract，就表明子类必须给出该方法的实现。
+**如果抽象类的方法前面加上 `abstract`，就表明子类必须给出该方法的实现。**
 
+```typescript
 abstract class A {
   abstract execute():string;
 }
-
 class B extends A {
   execute() {
     return `B executed`;
   }
 }
+```
 
 这里有几个注意点。
 
-（1）抽象成员只能存在于抽象类，不能存在于普通类。
+- （1）抽象成员只能存在于抽象类，不能存在于普通类。
 
-（2）抽象成员不能有具体实现的代码。也就是说，已经实现好的成员前面不能加abstract关键字。
+- （2）抽象成员不能有具体实现的代码。也就是说，已经实现好的成员前面不能加 `abstract` 关键字。
 
-（3）抽象成员前也不能有private修饰符，否则无法在子类中实现该成员。
+- （3）抽象成员前也不能有 `private` 修饰符，否则无法在子类中实现该成员。
 
-（4）一个子类最多只能继承一个抽象类。
+- （4）**一个子类最多只能继承一个抽象类。**
 
 总之，抽象类的作用是，确保各种相关的子类都拥有跟基类相同的接口，可以看作是模板。其中的抽象成员都是必须由子类实现的成员，非抽象成员则表示基类已经实现的、由所有子类共享的成员。
-this 问题
 
-类的方法经常用到this关键字，它表示该方法当前所在的对象。
+## 9. this 问题
 
+类的方法经常用到 `this` 关键字，它表示该方法当前所在的对象。
+
+```typescript
 class A {
   name = 'A';
 
@@ -1176,11 +1189,13 @@ const b = {
   getName: a.getName
 };
 b.getName() // 'b'
+```
 
-上面示例中，变量a和b的getName()是同一个方法，但是执行结果不一样，原因就是它们内部的this指向不一样的对象。如果getName()在变量a上运行，this指向a；如果在b上运行，this指向b。
+上例中，变量 `a` 和 `b` 的 `getName()` 是同一个方法，但是执行结果不一样，原因就是它们内部的 `this` 指向不一样的对象。如果 `getName()` 在变量 `a` 上运行，`this` 指向 `a`；如果在 `b` 上运行，`this` 指向 `b`。
 
-有些场合需要给出this类型，但是 JavaScript 函数通常不带有this参数，这时 TypeScript 允许函数增加一个名为this的参数，放在参数列表的第一位，用来描述函数内部的this关键字的类型。
+有些场合需要给出 `this` 类型，但是 JavaScript 函数通常不带有 `this` 参数，这时 TypeScript 允许函数增加一个名为 `this` 的参数，放在参数列表的第一位，用来描述函数内部的 `this` 关键字的类型。
 
+```typescript
 // 编译前
 function fn(
   this: SomeType,
@@ -1188,14 +1203,18 @@ function fn(
 ) {
   /* ... */
 }
+```
 
+```javascript
 // 编译后
 function fn(x) {
   /* ... */
 }
+```
 
-上面示例中，函数fn()的第一个参数是this，用来声明函数内部的this的类型。编译时，TypeScript 一旦发现函数的第一个参数名为this，则会去除这个参数，即编译结果不会带有该参数。
+上例中，函数 `fn()` 的第一个参数是 `this`，用来声明函数内部的 `this` 的类型。编译时，TypeScript 一旦发现函数的第一个参数名为 `this`，则会去除这个参数，即编译结果不会带有该参数。
 
+```typescript
 class A {
   name = 'A';
 
@@ -1207,44 +1226,29 @@ class A {
 const a = new A();
 const b = a.getName;
 
-b() // 报错
+b(); // The 'this' context of type 'void' is not assignable to method's 'this' of type 'A'. 类型'void'的'this'上下文不能分配给类型'A'的方法'this'。
+```
 
-上面示例中，类A的getName()添加了this参数，如果直接调用这个方法，this的类型就会跟声明的类型不一致，从而报错。
+上例中，类 `A` 的 `getName()` 添加了 `this` 参数，如果直接调用这个方法，`this` 的类型就会跟声明的类型不一致，从而报错。
 
-this参数的类型可以声明为各种对象。
+**`this` 参数的类型可以声明为各种对象。**
 
+```typescript
 function foo(
   this: { name: string }
 ) {
   this.name = 'Jack';
-  this.name = 0; // 报错
+  this.name = 0; // Type 'number' is not assignable to type 'string'.
 }
 
-foo.call({ name: 123 }); // 报错
+foo.call({ name: 123 }); // Type 'number' is not assignable to type 'string'.
+```
 
-上面示例中，参数this的类型是一个带有name属性的对象，不符合这个条件的this都会报错。
+上例中，参数 `this` 的类型是一个带有 `name` 属性的对象，不符合这个条件的 `this` 都会报错。
 
-TypeScript 提供了一个noImplicitThis编译选项。如果打开了这个设置项，如果this的值推断为any类型，就会报错。
+**在类的内部，`this` 本身也可以当作类型使用，表示当前类的实例对象。**
 
-// noImplicitThis 打开
-
-class Rectangle {
-  constructor(
-    public width:number,
-    public height:number
-  ) {}
-
-  getAreaFunction() {
-    return function () {
-      return this.width * this.height; // 报错
-    };
-  }
-}
-
-上面示例中，getAreaFunction()方法返回一个函数，这个函数里面用到了this，但是这个this跟Rectangle这个类没关系，它的类型推断为any，所以就报错了。
-
-在类的内部，this本身也可以当作类型使用，表示当前类的实例对象。
-
+```typescript
 class Box {
   contents:string = '';
 
@@ -1253,19 +1257,23 @@ class Box {
     return this;
   }
 }
+```
 
-上面示例中，set()方法的返回值类型就是this，表示当前的实例对象。
+上例中，`set()` 方法的 **返回值类型就是this，表示当前的实例对象。**
 
 注意，this类型不允许应用于静态成员。
 
+```typescript
 class A {
-  static a:this; // 报错
+  static a:this; // A 'this' type is available only in a non-static member of a class or interface. “this”类型仅在类或接口的非静态成员中可用。
 }
+```
 
-上面示例中，静态属性a的返回值类型是this，就报错了。原因是this类型表示实例对象，但是静态成员拿不到实例对象。
+上例中，静态属性 `a` 的返回值类型是 `this`，就报错了。原因是this类型表示实例对象，但是静态成员拿不到实例对象。
 
-有些方法返回一个布尔值，表示当前的this是否属于某种类型。这时，这些方法的返回值类型可以写成this is Type的形式，其中用到了is运算符。
+有些方法返回一个布尔值，表示当前的 `this` 是否属于某种类型。这时，这些方法的返回值类型可以写成 `this is Type` 的形式，其中用到了 `is` 运算符。
 
+```typescript
 class FileSystemObject {
   isFile(): this is FileRep {
     return this instanceof FileRep;
@@ -1277,5 +1285,6 @@ class FileSystemObject {
 
   // ...
 }
+```
 
-上面示例中，两个方法的返回值类型都是布尔值，写成this is Type的形式，可以精确表示返回值。
+上例中，两个方法的返回值类型都是布尔值，写成 `this is Type` 的形式，可以精确表示返回值。
